--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/favicon.png" type="image/png" sizes="16x16">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="IMG/favicon.png" type="image/png" sizes="16x16">
+    <link rel="stylesheet" href="CSS/style.css">
     <script type="text/javascript" src="JS/script.js"></script>
 
 
