--- a/pages/3.html
+++ b/pages/3.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Listas</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" href="../img/favicon.png" type="image/png" sizes="16x16">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="icon" href="../IMG/favicon.png" type="image/png" sizes="16x16">
 
 
 </head>
