--- a/pages/5.html
+++ b/pages/5.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="icon" href="../img/favicon.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="../IMG/favicon.png" type="image/png" sizes="16x16">
 
 </head>
 <body>
