Adding details and comments

--- a/pages/1.html
+++ b/pages/1.html
@@ -5,40 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="icon" href="../IMG/favicon.png" type="image/png" sizes="16x16">
-    <title>Document</title>
+    <title>IMG Background</title>
 </head>
-<body id="uno">
+<body id="bodyuno">
 
-    <div class="nosentido">
-
-
-
-        <article>
-            <section>
-                Lorem ipsum saepe dignissimos reiciendis dolore.
-            </section>
-
-            <a class="linkedin" href="../">
+    <a class="linkedin" href="../">
                 
-                <div class="boton1a">                
-                    <span>-- Volver --</span>
-                </div>
-            </a>
-
-            <section>
-                Lorem ipsum saepe dignissimos reiciendis dolore.
-            </section>
-        </article>
-
-
-
-
-    </div>
-
-
-
-
-
+        <div class="boton1a">                
+            <span>-- Volver --</span>
+        </div>
+    </a>
     
 </body>
 </html>
