--- a/pages/2.html
+++ b/pages/2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Módulo contenido</title>
+    <title>Text Elementos</title>
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="icon" href="../IMG/favicon.png" type="image/png" sizes="16x16">
 </head>
@@ -36,9 +36,9 @@
     <br><br>
     <i>Este elemento representa una voz alternativa o un estado de humor, como un pensamiento, un término técnico, etc. El texto se muestra por defecto con letra cursiva.</i>
     <br><br>
-
-    <section class="dos">
-        <p class="dosp"></p>
+        <!-- Imagen fixed en una seccion -->
+    <section class="dosfixed"> 
+        
     </section>
 
     <!-- Elementos para insertar textos que tienen un propósito claramente definido. -->
