--- a/pages/3.html
+++ b/pages/3.html
@@ -8,7 +8,7 @@
 
 
 </head>
-<body class="tres">
+<body class="bodytres">
 
     <a class="linkedin" href="../">
                 
@@ -18,7 +18,7 @@
     </a>
 
     <aside>
-        <h2>Lista de cursos Azul School</h2>
+        <h2>Lista de cursos</h2>
         <ul>
             <li>Curso de Python</li>
             <li>Curso de C++</li>
@@ -30,12 +30,12 @@
     <hr>
 
     <details>
-        <summary class="detalles">Listas de cursos Azul School</summary>
-        <p> -----Curso de Python</p>
-        <p> -----Curso de C++</p>
-        <p> -----Curso de SQL</p>
-        <p> -----Curso de React</p>
-        <p> -----Curso de Node.js</p>
+        <summary class="detalles">Lista desplegable</summary>
+        <p class="tap"> Curso de Python</p>
+        <p class="tap"> Curso de C++</p>
+        <p class="tap"> Curso de SQL</p>
+        <p class="tap"> Curso de React</p>
+        <p class="tap"> Curso de Node.js</p>
     </details>
 
     <hr>
