--- a/pages/4.html
+++ b/pages/4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hover Link</title>
     <link rel="icon" href="../IMG/favicon.png" type="image/png" sizes="16x16">
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
@@ -18,16 +18,14 @@
 
     <hr>
     <div class="contenedor">
-
         
         <div class="vermas">
 
-            Pos al parecer podemos escribir 
-            lo que sea aqui sin que
-            pase nada la verdad
-            pos es ink el link pero sin l 
-            hahahahahaha quen diria 
-            opuesto 
+            Por culpa de una terrible tormenta, 
+            Link naufraga y es arrastrado por 
+            la corriente hasta la costa de una 
+            extraña isla tropical habitada por 
+            lugareños muy curiosos
 
 
             <p>Ver mas</p>
