--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <body class="inde">
 
-        <header class="cabeza">
+        <header class="cabeza"> 
            Modulo 3.
         </header>
 
@@ -25,7 +25,7 @@
                 <a class="linkedin" href="pages/1.html">
 
                     <div class="boton1a">                
-                        <span> --1-- </span>
+                        <span> --IMG as background-- </span>
                     </div>
 
                 </a>
@@ -34,7 +34,7 @@
                 <a class="linkedin" href="pages/2.html">
 
                     <div class="boton1a">                
-                        <span> --2-- </span>
+                        <span> --Elements and IMG Fixed-- </span>
                     </div>
 
                 </a>
@@ -42,7 +42,7 @@
                 <a class="linkedin" href="pages/3.html">
 
                     <div class="boton1a">                
-                        <span> --3-- </span>
+                        <span> --Lists-- </span>
                     </div>
 
                 </a>
@@ -50,7 +50,7 @@
                 <a class="linkedin" href="pages/4.html">
 
                     <div class="boton1a">                
-                        <span> --Link-- </span>
+                        <span> --Opacity and Transition-- </span>
                     </div>
 
                 </a>
@@ -72,7 +72,7 @@
         </main>
         <br>
         <footer>
-            --------------------------------------
+            
         </footer>
 
 
