--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body class="inde">
 
         <header class="cabeza"> 
-           Modulo 3.
+           Klevens.
         </header>
 
         <br>
