--- a/pages/5.html
+++ b/pages/5.html
@@ -19,6 +19,9 @@
 
     <div class="pelota"></div> <!-- figura de pelota -->
 
-    
+    <div class="corazon">
+        <img src="../IMG/corazon.png" alt="Corazao">
+    </div>
+
 </body>
 </html>
