--- a/pages/5.html
+++ b/pages/5.html
@@ -16,7 +16,7 @@
             <span>-- Volver --</span>
         </div>
     </a>
-
+    <h1>Click the ball</h1>
     <div class="pelota"></div> <!-- figura de pelota -->
 
     <div class="corazon">
